--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     .algo3{
       /* position: relative;
       top: 90px; */
-      /* text-align: left; */
+      text-align: left;
     }
 
     .observablehq-tsp{
@@ -96,8 +96,8 @@
   </style>
   <body>
     <div class="header">
-      <h1>Algo Art</h1>
-      <p>Let's make some art happen!</p>
+      <h1>AlgoArt</h1>
+      <p>Customize Your Own Modern Art!</p>
     </div>
 
     <div id="observablehq-d16ce3fb">
